# NextCartAI

./: .env.example  .flake8  .gitignore  CLAUDE.md  DATA_PIPELINE_RUNBOOK.md  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  data-pipeline.yml  terraform.yml
contracts/bronze/: aisles.yml  departments.yml  order_products.yml  orders.yml  products.yml
contracts/silver/: order_products.yml  orders.yml  products.yml
infra/: main.tf
infra/environments/dev/: backend.tf  main.tf  terraform.tfvars.example  variables.tf
infra/lambda_handlers/product_api/: handler.py
infra/modules/api_gateway/: main.tf  outputs.tf
infra/modules/dms/: main.tf  outputs.tf  variables.tf
infra/modules/kinesis/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/: main.tf  variables.tf
infra/modules/rds/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf
instacart_mlops/: config.py
instacart_mlops/ingestion/: api_simulator.py  rds_seeder.py
instacart_mlops/processing/: __init__.py  bronze_to_silver.py  validator.py
instacart_mlops/simulators/: stream_producer.py
tests/: test_api_simulator.py  test_data_validation.py  test_stream_producer.py  test_validator.py
